WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
193224
[PSON] REGRESSION (
r239182
): Blank view when navigating back and forth between google.com and stack overflow
https://bugs.webkit.org/show_bug.cgi?id=193224
Summary
[PSON] REGRESSION (r239182): Blank view when navigating back and forth betwee...
Chris Dumez
Reported
2019-01-07 16:44:48 PST
Reproduction steps: 1. Load google.com in a tab 2. Paste and load “
https://stackoverflow.com/questions/32639263/changed-load-method-order-in-xcode-7/33851001#33851001
” in the URL bar in the same tab 3. Press “Back” button in Safari to go back to Google.com 4. Press “Forward” button in Safari to go back to stackoverflow.com -> Notice that the view is blank instead of showing stackoverflow.com.
Attachments
Patch
(5.91 KB, patch)
2019-01-07 16:50 PST
,
Chris Dumez
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Chris Dumez
Comment 1
2019-01-07 16:45:02 PST
<
rdar://problem/47097726
>
Chris Dumez
Comment 2
2019-01-07 16:50:01 PST
Created
attachment 358557
[details]
Patch
EWS Watchlist
Comment 3
2019-01-07 16:52:25 PST
Attachment 358557
[details]
did not pass style-queue: ERROR: Tools/TestWebKitAPI/Tests/WebKitCocoa/ProcessSwapOnNavigation.mm:688: Multi-line string ("...") found. This lint script doesn't do well with such strings, and may give bogus warnings. They're ugly and unnecessary, and you should use concatenation instead". [readability/multiline_string] [5] ERROR: Tools/TestWebKitAPI/Tests/WebKitCocoa/ProcessSwapOnNavigation.mm:690: Multi-line string ("...") found. This lint script doesn't do well with such strings, and may give bogus warnings. They're ugly and unnecessary, and you should use concatenation instead". [readability/multiline_string] [5] Total errors found: 2 in 4 files If any of these errors are false positives, please file a bug against check-webkit-style.
Chris Dumez
Comment 4
2019-01-08 09:59:58 PST
Comment on
attachment 358557
[details]
Patch Clearing flags on attachment: 358557 Committed
r239726
: <
https://trac.webkit.org/changeset/239726
>
Chris Dumez
Comment 5
2019-01-08 10:00:00 PST
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug